# lucky_thirteen

./: .gitignore  .yml  README.md  build.bat  lucky_thirteen.py  lucky_thirteen.spec  requirements.txt  setup.cfg
.github/workflows/: main.yml
