[metadata]
name = lucky_thirteen
description = An arcade-style game where you need to find numbers equating to 13.
description-file = README.md
description-content-type = text/markdown
author = Chris Norman
author-email = chris.norman2@googlemail.com
license = MPL

[tool:pytest]
testpaths = "tests"
addopts = "-xq"

[flake8]
exclude = env, .eggs, build
